# MichelleDB

./: Cargo.toml  README.md  script.sh
src/: db.rs  lexer.rs  main.rs  routes.rs  server.rs  service.rs
