[package]
name = "michelledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
uuid = {version = "1.1.2", features = ["v4"]}
